hphp/test/zend/good/Zend/tests/traits/inheritance003.php.expectf
World!

Catchable fatal error: Argument 1 passed to MyHelloWorld::sayHello() must be an instance of Base, array given in %s/inheritance003.php on line 29
